# OS

./: README.md
Libs/Number/: CMakeLists.txt  Number.cpp
Libs/TetstingLibs/: CMakeLists.txt  main.cpp
Libs/Vector/: CMakeLists.txt  Vector.h  main.cpp
M/: main.cpp
OS-RightVersion/: .gitignore
OS-RightVersion/Libraries/Lab1/: Naim.sln
OS-RightVersion/Libraries/Lab1/Lab1/: Lab1.cpp  Lab1.vcxproj
OS-RightVersion/Libraries/Numbers/: Numbers.sln
OS-RightVersion/Libraries/Numbers/Numbers/: Number.cpp  Number.h  Numbers.cpp  Numbers.vcxproj  Numbers.vcxproj.filters
OS-RightVersion/Libraries/Numbers/Output/: Numbers.idb  Numbers.lib
OS-RightVersion/Libraries/Vector/: Vector.sln
OS-RightVersion/Libraries/Vector/Output/: Vector.exp  Vector.lib
OS-RightVersion/Libraries/Vector/Vector/: Vector.cpp  Vector.h  (+1 more)
P/: main.cpp
channel/: buffered_channel.h
killer/: main.cpp
lib_with_BashScript/: main  script.sh
lib_with_BashScript/Number/: Number.h
lib_with_BashScript/Vector/: Vector.cpp
matrix_lin/: CMakeLists.txt  blockMatrix.cpp  blockMatrix.h  main.cpp  matrix.h
matrix_win/: CMakeLists.txt  blockMatrix.cpp  blockMatrix.h  main.cpp  matrix.cpp  matrix.h
mtr+channel/: CMakeLists.txt  block_matrix.cpp  block_matrix.h  channel.h  main.cpp  matrix.cpp  matrix.h
pipe_main/: main.cpp
pipes/A/: main.cpp
pipes/M/: main.cpp
pipes/S/: main.cpp
pipes/main/: main.cpp
thrd/: CMakeLists.txt  blockMatrix.cpp  blockMatrix.h  main.cpp  matrix.h
thread/: matrix.cpp
user/: main.cpp
user-killer/killer1/: main.cpp
user-killer/user/: main.cpp
